<resources>
    <string name="app_name">SoundTone</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="all_songs">All Songs</string>
    <string name="choose_alarm_playlist">Choose Alarm Playlist</string>
    <string name="add_to_playlist">Add To PlayList</string>
    <string name="delete_from_playlist">Delete from this PlayList</string>
    <string name="play_song">Play Song in Default Player</string>
    <string name="deleting_song">"Deleting song: "</string>
    <string name="from_playlist">" From Playlist:"</string>
    <string name="create_new_playlist">Create new PlayList</string>
    <string name="create_playlist_hint">My new SoundTone playlist</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="cant_find_playlists">Can\'t find any playlist in playlist cursor.</string>
    <string name="no_playlists_to_show">No playlists to show</string>
    <string name="logo">Logo</string>
    <string name="soundtone">SoundTone</string>
    <string name="help_text">Hey there, I\'m the guy who developed SoundTone.\n
                            This is my first app deployed to the App store so First of all, I wanted to thank you, for being here.\n
                            I\'ve created this app out of a need I had for a long time.\n
                            waking up every morning with the same short repetitive AlarmTone drove me crazy,\n
                            after it was done I started wondering why not share it with you?\n
                            and here we are :)\n\n
                            so if you have any requests/ideas/will to help/any thing with this project you are welcome to contact me.\n\n
                            Thanks again. \nSoundTone.
    </string>
    <string name="all_rights_reserved">© 2017 Tal Atedgi All Rights Reserved</string>
    <string name="help">Help</string>
    <string name="title_activity_help">About Us…</string>
    <string name="add_to_playlist_button">add to playlist</string>
    <string name="set_as_def_ring">Set as default AlarmTone</string>
    <string name="playlist_was_set">PlayList was set as default ringtone</string>
    <string name="about">About…</string>
    <string name="banner_ad_unit_id">ca-app-pub-3128271444383185/7721408754</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="native_ad_init_id">ca-app-pub-3128271444383185/5687455554</string>
    <string name="sorry_no_settings">Sorry. I still didn\'t get the chance to build a Setting page, if you have any settings requests or any input at all please let me know through the about page…</string>
    <string name="no_settings_yet">No Settings Yet…</string>
    <string name="choose_this_song">Choose this song…</string>
    <string name="ok">OK</string>
</resources>
