<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_to_playlist"
        android:orderInCategory="98"
        android:title="@string/add_to_playlist_button"
        android:icon="@drawable/add_playlist"
        android:visible="false"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_delete_from_playlist"
        android:orderInCategory="97"
        android:title="@string/delete_from_playlist"
        android:icon="@drawable/rubbish_bin"
        android:visible="false"
        app:showAsAction="always|collapseActionView" />

    <item
    android:id="@+id/action_create_playlist"
    android:orderInCategory="99"
    android:title="@string/create_new_playlist"
    app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/help_button"
        android:orderInCategory="101"
        android:title="@string/help"
        app:showAsAction="never"/>

    <item android:id="@+id/search"
        android:title="Search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />

</menu>
